--- a/index.html
+++ b/index.html
@@ -1,1 +1,40 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>mod2-assignment</title>
+    <link rel="stylesheet" href="css/styles.css">
+</head>
+
+<body>
+    <div class="row">
+        <h1>Our Menu</h1>
+        <div class="col-lg-4 col-md-6 col-sm-12" id="container">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat doloremque saepe, earum iusto natus asperiores maiores adipisci voluptatibus dolorum, rem aut facere, consequatur ducimus sit enim error reprehenderit minus eaque.</p>
+            <p id="p1">Chicken</p>
+
+        </div>
+
+
+
+        <div class="col-lg-4 col-md-6 col-sm-12" id="container">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo omnis corrupti qui aliquam quia. Dolor repellendus enim accusantium cum et, incidunt numquam alias, necessitatibus libero, similique saepe facere vero doloribus?</p>
+
+            <p id="p2">Paneer</p>
+
+        </div>
+
+        <div class="col-lg-4 col-md-6 col-sm-12" id="container">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore nesciunt necessitatibus repudiandae cum ducimus natus. Corrupti modi, voluptate delectus, nostrum voluptates sit et blanditiis cumque non, nisi nesciunt voluptatibus officiis?</p>
+
+            <p id="p3">Sushi</p>
+        </div>
+
+    </div>
+
+</body>
+
+</html>
