--- a/index.html
+++ b/index.html
@@ -17,36 +17,46 @@
 <body>
     <header>
         <nav id="header-nav" class="navbar navbar-default">
-            <div class="container-fluid">
+            <div class="container">
                 <div class="navbar-header">
                     <div class="navbar-brand">
-                        <a href="index.html"><h1>Food, LLC</h1></a>
+                        <h1>Food, LLC</h1>
                     </div>
 
-                    <button type="button visible-xs" class="navbar-toggle collapsed" data-bs-toggle="collapse" data-bs-target="#collapsable-nav" aria-expanded="false">
+                    <button type="button" class="navbar-toggle collapsed visible-xs" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
+
                 </div>
 
                 <div id="collapsable-nav" class="collapse navbar-collapse">
-                    <ul id="nav-list" class="nav navbar-nav navbar-right visible-xs ">
-                        <li>
-                            <a><br class="visible-xs"> Chicken</a>
-                        </li>
-                        <li>
-                            <a><br class="visible-xs"> Paneer</a>
-                        </li>
-                        <li>
-                            <a><br class="visible-xs"> Sushi</a>
-                        </li>
+                    <ul id="nav-list" class="nav navbar-nav navbar-right visible-xs">
+                      <li>
+                        <a href="#">
+                            Chicken<hr>
+                        </a>
+                      </li>
+                      
+                      <li>
+                        <a href="#">
+                            Paneer<hr>
+                        </a>
+                      </li>
+  
+                      <li>
+                        <a href="#">
+                            Sushi<hr>
+                        </a>
+                      </li>                      
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
+
 
     <div id="main-content" class="container">
         <h2 id="top-heading" class="text-center">Our Menu</h2>
