--- a/index.html
+++ b/index.html
@@ -111,9 +111,12 @@
 
     </div>
 
-    <!-- jQuery (Bootstrap JS plugins depend on it) -->
-    <script src="js/bootstrap.min.js"></script>
-    <!-- <script src="js/script.js"></script> -->
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="js\jquery-2.1.4.min.js"></script>
+    <script src="js\bootstrap.min.js"></script>
+    <script src="js\script.js"></script>
+
 
 </body>
 
